--- a/public/lists.css
+++ b/public/lists.css
@@ -7,11 +7,11 @@
     align-items: flex-start;
 }
 
-.createNewList {
+#createNewList {
     margin-left: 20px;
 }
 
-.createNewList .createNewListButton {
+#createNewListButton {
     margin: 0 auto;
     padding-top: 5px;
     padding-bottom: 5px;
@@ -26,7 +26,7 @@
     font-size: 14px;
 }
 
-.createNewList .createNewListButton:hover {
+#createNewListButton:hover {
     background-color: rgb(223, 223, 223);
 
     color: #241a55;
