--- a/public/cardDetails.css
+++ b/public/cardDetails.css
@@ -53,7 +53,8 @@
     display: flex;
     flex-direction: column;
 
-    padding-left: 10px;
+    margin-bottom: 3px;
+    padding-left: 9px;
 }
 
 .toDoListContainer .toDoItem {
@@ -69,6 +70,51 @@
     float: left;
     margin-top: 2px;
     margin-right: 5px;
+}
+
+.modalToDoList .newToDoForm  {
+    display: none;
+    padding-left: 9px;
+}
+
+.modalToDoList .newToDoForm input {
+    width: 210px;
+    padding: 5px;
+
+    font-size: 14px;
+
+    border-style: solid;
+    border-color:#c3c3c3;
+    border-width: 1px;
+    border-radius: 5px;
+}
+
+.modalToDoList .newToDoForm button {
+    height: 28px;
+    font-size: 14px;
+}
+
+.modalToDoList .newToDoButton {
+    margin: 0 auto;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: auto;
+    
+    background-color: #F4F5F7;
+    border-style: none;
+    border-radius: 5px;
+    
+    color: #787390;
+    text-align: center;
+    font-size: 14px;
+}
+
+.modalToDoList .newToDoButton:hover {
+    background-color: rgb(223, 223, 223);
+
+    color: #241a55;
+
+    cursor: pointer;
 }
 
 .closeModal {
